--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 django-filter
 djangorestframework
-asgiref==3.2.7
-Django==3.0.5
-django-filter==2.2.0
+asgiref==3.2.10
+Django==3.0.7
+django-filter==2.3.0
 djangorestframework==3.11.0
 pytz==2019.3
 sqlparse==0.3.1
+Pillow==7.2.0
