--- a/.config/uwsgi/api.ini
+++ b/.config/uwsgi/api.ini
@@ -1,1 +1,18 @@
+[uwsgi]
+chdir = /home/ubuntu/srv/PyeonHang/
+module = api_server.wsgi:application
+home = /home/ubuntu/.pyenv/versions/3.6.2/envs/uwsgi-env
 
+uid = deploy
+gid = deploy
+
+socket = /tmp/api.sock
+chmod-socket = 666
+chown-socket = deploy:deploy
+
+enable-threads = true
+master = true
+vacuum = true
+pidfile = /tmp/api.pid
+logto = /var/log/uwsgi/api/@(exec://date +%%Y-%%m-%%d).log
+log-reopen = true
