--- a/.config/nginx/api.conf
+++ b/.config/nginx/api.conf
@@ -1,1 +1,11 @@
+server {
+    listen 80;
+    server_name *.compute.amazonaws.com;
+    charset utf-8;
+    client_max_body_size 128M;
 
+    location / {
+        uwsgi_pass  unix:///tmp/api.sock;
+        include     uwsgi_params;
+    }
+}
